# rail_people_detection

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  package.xml
msg/: People.msg  Person.msg
nodes/: centroid_to_pos
rail_people_detection/: CHANGELOG.rst  CMakeLists.txt  package.xml
rail_people_detection_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rail_people_detection_msgs/msg/: Centroid.msg  DetectionContext.msg  Person.msg
rail_people_detection_msgs/srv/: CentroidPositionQuery.srv
rail_people_detection_utils/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
rail_people_detection_utils/src/rail_people_detection_utils/: position_mapper.py
rail_people_detector/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
rail_people_detector/launch/: closest_person_detection.launch  icra_leg_tracker.launch
rail_people_detector/nodes/: closest_person_node  detector_node  people_from_objects_node
rail_people_detector/src/rail_people_detector/: closest_person_detector.py  people_from_legs_and_faces.py  people_from_objects.py
rail_people_detector/src/rail_person_detector/: person_detector.py
rail_person_detector/: CMakeLists.txt  package.xml  setup.py
rail_person_detector/src/rail_person_detector/: person_detector.py  position_mapper.py
src/rail_person_detector/: person_detector.py  position_mapper.py
